Add on_sale and instant_sale_price to asset response
